--- a/cpp-oop-bank-system/cpp-oop-bank-system.vcxproj.filters
+++ b/cpp-oop-bank-system/cpp-oop-bank-system.vcxproj.filters
@@ -44,5 +44,11 @@
     <ClInclude Include="clsUtil.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="clsMainScreen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="clsScreen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
