--- a/cpp-oop-bank-system/cpp-oop-bank-system.vcxproj
+++ b/cpp-oop-bank-system/cpp-oop-bank-system.vcxproj
@@ -134,6 +134,8 @@
     <ClCompile Include="clsPerson.cpp" />
     <ClCompile Include="clsTotalBalancesScreen.cpp" />
     <ClCompile Include="clsTransactionsScreen.cpp" />
+    <ClCompile Include="clsUsers.cpp" />
+    <ClCompile Include="clsUsersListScrren.cpp" />
     <ClCompile Include="clsWithdrawScreen.cpp" />
     <ClCompile Include="cpp-oop-bank-system.cpp" />
   </ItemGroup>
@@ -154,6 +156,8 @@
     <ClInclude Include="clsTotalBalancesScreen.h" />
     <ClInclude Include="clsTransactionsScreen.h" />
     <ClInclude Include="clsUpdateClientScreen.h" />
+    <ClInclude Include="clsUser.h" />
+    <ClInclude Include="clsListUsersScreen.h" />
     <ClInclude Include="clsUtil.h" />
     <ClInclude Include="clsWithdrawScreen.h" />
   </ItemGroup>
