--- a/cpp-oop-bank-system/cpp-oop-bank-system.vcxproj
+++ b/cpp-oop-bank-system/cpp-oop-bank-system.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="clsAddNewUserScreen.cpp" />
     <ClCompile Include="clsBankClient.cpp" />
+    <ClCompile Include="clsCurrency.cpp" />
     <ClCompile Include="clsDeleteUserScreen.cpp" />
     <ClCompile Include="clsDepositScreen.cpp" />
     <ClCompile Include="clsFindClientScreen.cpp" />
@@ -147,11 +148,13 @@
     <ClCompile Include="clsUsersListScrren.cpp" />
     <ClCompile Include="clsWithdrawScreen.cpp" />
     <ClCompile Include="cpp-oop-bank-system.cpp" />
+    <ClCompile Include="InterfaceCommunication.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="clsAddNewClientScreen.h" />
     <ClInclude Include="clsAddNewUserScreen.h" />
     <ClInclude Include="clsBankClient.h" />
+    <ClInclude Include="clsCurrency.h" />
     <ClInclude Include="clsDate.h" />
     <ClInclude Include="clsDeleteClientScreen.h" />
     <ClInclude Include="clsDeleteUserScreen.h" />
@@ -178,6 +181,7 @@
     <ClInclude Include="clsUtil.h" />
     <ClInclude Include="clsWithdrawScreen.h" />
     <ClInclude Include="Global.h" />
+    <ClInclude Include="InterfaceCommunication.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
