--- a/cpp-oop-bank-system/cpp-oop-bank-system.vcxproj
+++ b/cpp-oop-bank-system/cpp-oop-bank-system.vcxproj
@@ -129,7 +129,9 @@
   <ItemGroup>
     <ClCompile Include="clsAddNewUserScreen.cpp" />
     <ClCompile Include="clsBankClient.cpp" />
+    <ClCompile Include="clsCurrenciesListScreen.cpp" />
     <ClCompile Include="clsCurrency.cpp" />
+    <ClCompile Include="clsCurrencyExchangeMainScreen.cpp" />
     <ClCompile Include="clsDeleteUserScreen.cpp" />
     <ClCompile Include="clsDepositScreen.cpp" />
     <ClCompile Include="clsFindClientScreen.cpp" />
@@ -154,7 +156,9 @@
     <ClInclude Include="clsAddNewClientScreen.h" />
     <ClInclude Include="clsAddNewUserScreen.h" />
     <ClInclude Include="clsBankClient.h" />
+    <ClInclude Include="clsCurrenciesListScreen.h" />
     <ClInclude Include="clsCurrency.h" />
+    <ClInclude Include="clsCurrencyExchangeMainScreen.h" />
     <ClInclude Include="clsDate.h" />
     <ClInclude Include="clsDeleteClientScreen.h" />
     <ClInclude Include="clsDeleteUserScreen.h" />
@@ -162,7 +166,7 @@
     <ClInclude Include="clsFindClientScreen.h" />
     <ClInclude Include="clsFindUserScreen.h" />
     <ClInclude Include="clsInputValidate.h" />
-    <ClInclude Include="clsListClientScreen.h" />
+    <ClInclude Include="clsClientListScreen.h" />
     <ClInclude Include="clsLoginRegisterScreen.h" />
     <ClInclude Include="clsLoginScreen.h" />
     <ClInclude Include="clsMainScreen.h" />
