--- a/cpp-oop-bank-system/cpp-oop-bank-system.vcxproj.filters
+++ b/cpp-oop-bank-system/cpp-oop-bank-system.vcxproj.filters
@@ -90,6 +90,9 @@
     <ClCompile Include="clsFindCurrencyScreen.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="clsUpdateCurrencyRate.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="clsPerson.h">
@@ -192,6 +195,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="clsFindCurrencyScreen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="clsUpdateCurrencyRateScreen.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
